# HomeBot

./: .gitignore  LICENSE  README.md  main.py  test.py
android_app/: .gitignore
android_app/app/: build.gradle
android_app/app/src/androidTest/java/com/example/bot/: ExampleInstrumentedTest.kt
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/example/bot/: AlarmBroadcast.kt  BackgroundService.kt  ControlShadeBroadcast.kt  IotWidget.kt  MainActivity.kt  RestartReceiver.kt  WifiConnectionBroadcast.kt
android_app/app/src/main/java/com/example/bot/tools/: Helper.kt
android_app/app/src/main/proto/: iot.proto
android_app/app/src/main/res/layout/: activity_main.xml  iot_widget.xml
android_app/app/src/main/res/values/: colors.xml  strings.xml
android_app/app/src/main/res/xml/: iot_widget_info.xml
android_app/app/src/test/java/com/example/bot/: ExampleUnitTest.kt
fuelprice/: fuelprice.py
fuelprice/webscraper/src/: webScraper.cpp
fuelprice/webscraper/src/proto/: users.pb.cc  users.pb.h
iot/: iot.py
iot/scanner/src/: Main.cpp  Scanner.cpp
iot_devices/ControlShade/: ControlShade.ino
iot_devices/ControlleShade/: ControlleShade.ino
main/: .gitignore  CMakeLists.txt  Dockerfile  README.md  bot.conf.example  config.py  dependencies.sh  main.py  requirements.txt  test.py
main/fuelprice/: fuelprice.py
main/fuelprice/src/: Scraper.cpp  Scraper.h
main/fuelprice/src/proto/: users.pb.cc  users.pb.h
main/fuelprice/webscraper/: .gitignore  README.md
main/fuelprice/webscraper/src/: Main.cpp  Scraper.cpp
main/fuelprice/webscraper/src/proto/: proto.sh  users.pb.cc  users.pb.h
main/iot/: iot.py
main/iot/backend/: README.md
main/iot/backend/src/: Database.cpp  Main.cpp  Service.cpp  Service.h
main/iot/backend/src/grpc_proto/: iot.grpc.pb.h  iot.pb.cc  iot.pb.h  proto.sh
main/iot/protobuf/: iot.proto  iot_pb2.py
main/iot/scanner/src/: Scanner.h
main/iot/service/: .gitignore  README.md
main/iot/service/src/: Database.cpp  Database.h  IotService.cpp  Main.cpp  Service.cpp  Service.h
main/iot/service/src/grpc_proto/: iot.grpc.pb.cc  iot.pb.cc  iot.pb.h
main/iot/service/src/tools/: Ping.cpp  Ping.h
main/iot/src/: Database.cpp  Database.h  IotService.cpp  Main.cpp  Service.cpp
main/iot/src/grpc_proto/: iot.grpc.pb.cc  iot.grpc.pb.h  iot.pb.cc  iot.pb.h  iot.proto
main/powerwall/: calc_month_values.py  integral.py  plot.py  powerwall.py
main/users/: users.py  users_pb2.py
main/utils/: Database.cpp  Database.h  TelegramAPI.cpp  TelegramAPI.h
main/website/: download.php  index.php  power.php
main/wol/: wakeonlan.py
main/wol/ping/: README.md
main/wol/ping/src/: Main.cpp  Ping.cpp  Ping.h
main/wol/src/: Main.cpp
powerwall/: calc_month_values.py  powerwall.py
users/: users.proto  users.py  users_pb2.py
website/: README.md  download.php  index.php  power.php
website/css/: main.css
website/js/: main.js
wol/: wakeonlan.py
